--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-716.6KB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.13MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-590.8KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-188.2KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35132, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-496.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-2.40MB/s(Youtube:不良林), server: 140.179.111.225, port: 48611, type: ss, cipher: aes-256-gcm, password: JkwHP4H3Vh}
+  - {name: 🇺🇸 美国-4.42MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-645.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-652.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.04MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-716.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-188.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-716.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-188.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-716.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-188.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-716.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-188.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-716.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-188.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-716.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-188.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-716.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-188.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
