--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.94MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.21MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.11MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇨🇳 中国-3.85MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35113, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-285.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇯🇵 日本-2.87MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-958.0KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.94MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-652.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.15MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.67MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.74MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-958.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-958.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-958.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-958.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-958.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-958.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-958.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.94MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
